[package]
name = "calc_near_x"
version = "0.1.0"
edition = "2021"
description = "Simple lib for learn proposal"
authors = ["Renato Oliveira <rlealoliveira@gmail.com>"]
repository = "https://github.com/RenatoLealOliveira/calc_nearx.git"
readme = "Readme.md"
license = "MIT"
keywords = [

    "learn"
]

[dependencies]
